--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta property="og:site_name" content="Hữu Tường &amp; Hà Nhung">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Hữu Tường &amp; Hà Nhung Wedding site!">
-    <meta property="og:url" content="https://holily.iwedding.info">
+    <meta property="og:url" content="https://nhungtuong.com">
     <meta property="og:description" content="Nguyễn Hữu Tường &amp; Nguyễn Hà Nhung - Our wedding date: 2026-03-30 | Tình yêu đích thực đứng về phía nhau trong những ngày tốt đẹp và sát cánh hơn trong những ngày tồi tệ">
-    <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/695b65e41216f49da10a1d1f/7c05de6bb00283ed9258c46f31a33a68.jpeg">
-    <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/695b65e41216f49da10a1d1f/7c05de6bb00283ed9258c46f31a33a68.jpeg">
-    <meta property="og:image:secure_url" content="https://cdn.biihappy.com/ziiweb/website/695b65e41216f49da10a1d1f/7c05de6bb00283ed9258c46f31a33a68.jpeg">
+    <meta property="og:image" content="./assets/images/favicon.jpg">
+    <meta property="og:image:url" content="./assets/images/favicon.jpg">
+    <meta property="og:image:secure_url" content="./assets/images/favicon.jpg">
     <meta name="format-detection" content="telephone=no">
     <meta name="application-name" content="iWedding">
     <meta name="author" content="Biihappy.com">
