--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
         </div>
     </section>
 
-    <!-- <section class="rsvp-area section-bg" id="rsvp" style="background:url(https://cdn.biihappy.com/ziiweb/default/template/6174ee5134c46827c45a50e5/05377a05efd75334b07671ca8e80985e.jpg) no-repeat;">
+    <section class="rsvp-area section-bg" id="rsvp" style="background:url(https://cdn.biihappy.com/ziiweb/default/template/6174ee5134c46827c45a50e5/05377a05efd75334b07671ca8e80985e.jpg) no-repeat;">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
@@ -1241,7 +1241,7 @@
         </div>
     </div>
 </section>
- -->
+
 
     <div id="donate-modal" class="donate-modal">
         <div class="donate-modal-content">
@@ -1260,10 +1260,10 @@
                 <div class="donate-box">
                     <div class="donate-card">
                         <h3>Mừng cưới đến chú rể</h3>
-                        <img class="qr-code-image" src="./assets/images/vp.jpg">
-                        <p>Ngân hàng: <strong>VP Bank</strong></p>
+                        <img class="qr-code-image" src="./assets/images/tp.jpg">
+                        <p>Ngân hàng: <strong>TP Bank</strong></p>
                         <p>Tên tài khoản: <strong>Nguyễn Hữu Tường</strong></p>
-                        <p>Số tài khoản: <strong>8386888896</strong></p>
+                        <p>Số tài khoản: <strong>68386888896</strong></p>
 
                     </div>
                     <div class="donate-card">
